# hhuOS

./: .gitignore  LICENSE  run.sh
cmake/: CMakeLists.txt
cmake/application/: CMakeLists.txt
cmake/device/: CMakeLists.txt
cmake/device/graphic/: CMakeLists.txt
cmake/filesystem/: CMakeLists.txt
cmake/filesystem/fat/: CMakeLists.txt
cmake/filesystem/lfs/: CMakeLists.txt
cmake/initrd/: CMakeLists.txt
cmake/kernel/: CMakeLists.txt
cmake/kernel/core/: CMakeLists.txt
cmake/kernel/memory/: CMakeLists.txt
cmake/kernel/multiboot/: CMakeLists.txt
cmake/kernel/thread/: CMakeLists.txt
cmake/lib/system/: CMakeLists.txt
cmake/lib/util/: CMakeLists.txt
cmake/platform/: CMakeLists.txt
cmake/platform/x86/: CMakeLists.txt
cmake/platform/x86/bios/: CMakeLists.txt
cmake/platform/x86/bios/device/: CMakeLists.txt
cmake/platform/x86/bios/device/bios/: CMakeLists.txt
cmake/platform/x86/bios/device/graphic/: CMakeLists.txt
cmake/platform/x86/bios/iso/: CMakeLists.txt
cmake/platform/x86/bios/system/: CMakeLists.txt
cmake/platform/x86/device/: CMakeLists.txt
cmake/platform/x86/device/cpu/: CMakeLists.txt
cmake/platform/x86/device/interrupt/: CMakeLists.txt
cmake/platform/x86/kernel/: CMakeLists.txt
cmake/platform/x86/kernel/interrupt/: CMakeLists.txt
cmake/platform/x86/kernel/memory/: CMakeLists.txt
cmake/system/: CMakeLists.txt
cmake/util/: CMakeLists.txt
hdd/books/: alice.txt  dorian_gray.txt  grimms_fairy_tales.txt  huckleberry_finn.txt  peter_pan.txt  romeo_and_juliet.txt  sherlock_holmes.txt  sleepy_hollow.txt  wonderful_wizard.txt
platform/x86/bios/: run.sh
platform/x86/bios/src/: X86BiosPlatform.cpp  X86BiosPlatform.h
platform/x86/efi/: run.sh
platform/x86/src/: X86Platform.cpp  X86Platform.h  asm_interface.cpp
platform/x86/src/device/cpu/: Cpu.cpp
platform/x86/src/kernel/interrupt/: InterruptDispatcher.cpp
platform/x86/src/kernel/memory/: PageDirectory.cpp  Paging.cpp  VirtualAddressSpace.cpp  VirtualAddressSpace.h
src/: GatesOfHell.cpp  GatesOfHell.h  Platform.h  startup.asm
src/device/cpu/: Cpu.h
src/device/input/: Keyboard.cpp  Mouse.cpp
src/device/isa/: Isa.h
src/device/misc/: Cmos.h
src/device/network/: NetworkDevice.h
src/device/network/e1000/: E1000.h
src/device/network/e1000/eeprom/: EepromRead.h  ErDefault.h
src/device/network/e1000/interrupt/: InterruptCause.h
src/device/port/: Port.h
src/device/sound/soundblaster/: SoundBlaster.cpp  SoundBlaster.h  SoundBlaster16.cpp
src/device/storage/ahci/: AhciController.h
src/device/storage/device/: StorageDevice.cpp  StorageDevice.h
src/device/storage/floppy/: FloppyController.cpp  FloppyController.h  FloppyDevice.cpp  FloppyMotorControlThread.cpp
src/device/time/: Pit.cpp  Rtc.cpp
src/filesystem/core/: FsNode.h
src/filesystem/fat/: FatDriver.cpp  FatDriver.h  FatFs.cpp  FatFs.h  FileAllocationTable.cpp  FileAllocationTable.h  FileAllocationTable12.cpp  FileAllocationTable12.h  FileAllocationTable16.cpp  FileAllocationTable16.h  FileAllocationTable32.cpp  FileAllocationTable32.h
src/filesystem/lfs/: Inode.h  InodeMapEntry.h  Lfs.cpp  Lfs.h  LfsDriver.cpp  LfsDriver.h  LfsFlushCallback.cpp  LfsFlushCallback.h  LfsNode.cpp  LfsNode.h  Superblock.h
src/filesystem/ram/: VirtualNode.h
src/filesystem/ram/nodes/: StorageNode.cpp
src/kernel/boot/: BootComponent.cpp  BootCoordinator.cpp  BootCoordinator.h  BootScreen.cpp  BootScreen.h
src/kernel/core/: Management.cpp  Management.h  System.cpp  System.h
src/kernel/event/: EventPublisher.cpp
src/kernel/interrupt/: InterruptManager.cpp  interrupt.asm
src/kernel/memory/: PageDirectory.cpp  Paging.h  VirtualAddressSpace.cpp  VirtualAddressSpace.h  operators.cpp
src/kernel/memory/manager/: BitmapMemoryManager.cpp  BitmapMemoryManager.h  FreeListMemoryManager.cpp  FreeListMemoryManager.h  MemoryManager.cpp  MemoryManager.h  PageFrameAllocator.cpp
src/kernel/multiboot/: MultibootLinearFrameBufferProvider.cpp  Structure.cpp  Structure.h
src/kernel/process/: Process.cpp  Process.h  ProcessScheduler.cpp  ProcessScheduler.h  ThreadScheduler.cpp  ThreadScheduler.h
src/kernel/service/: EventBus.cpp  EventBus.h  TimeService.cpp
src/kernel/thread/: ApplicationMainThread.cpp  ApplicationMainThread.h  IdleThread.cpp  KernelThread.cpp  KernelThread.h  Scheduler.cpp  Thread.cpp  Thread.h  UserThread.cpp  UserThread.h  thread.asm
src/lib/async/: Atomic.cpp  SimpleThread.cpp  SimpleThread.h  ThreadPool.cpp  ThreadPool.h
src/lib/file/: File.h
src/lib/stream/: InputStream.h
src/lib/util/: ByteBuffer.cpp  ByteBuffer.h
src/modules/fat/: FatFs.h
src/modules/floppy/: FloppyController.cpp  FloppyDevice.cpp  FloppyDevice.h
src/os/: GatesOfHell.cpp  Makefile
src/os/apps/Shell/Commands/: DelPart.cpp  DelVdd.cpp  MkPart.cpp  MkPartTable.cpp  MkVdd.cpp
src/os/devices/: Pci.cpp  Pci.h
src/os/devices/net/: Realtek8139.cpp  Realtek8139.h
src/os/devices/pci/: Pci.cpp
src/os/devices/storage/: StorageDevice.cpp  StorageDevice.h
src/os/devices/storage/ahci/: AhciController.cpp  AhciController.h  AhciDevice.cpp  AhciDevice.h
src/os/devices/storage/ata/: AtaController.cpp  AtaController.h  AtaDevice.cpp  AtaDevice.h  AtaIsaDriver.cpp  AtaIsaDriver.h  AtaModule.cpp  AtaModule.h  AtaPciDriver.cpp  AtaPciDriver.h  PataDevice.cpp  PataDevice.h  PatapiDevice.cpp  PatapiDevice.h
src/os/devices/storage/controller/: Ahci.cpp  Ahci.h
src/os/devices/storage/virtual/: VirtualDiskDrive.h
src/os/devices/usb/: UhciController.cpp  UhciController.h
src/os/devices/usb/ehci/: Ehci.h
src/os/filesystem/: FsDriver.h
src/os/filesystem/RamFs/nodes/: StorageNode.h
src/os/kernel/: IOport.h
src/os/kernel/events/storage/: StorageAddEvent.h  StorageRemoveEvent.h
src/os/kernel/memory/manager/: FreeListMemoryManager.cpp
src/os/kernel/services/: StorageService.cpp  StorageService.h
src/os/lib/: IoPortWrapper.cpp  IoPortWrapper.h
src/os/lib/libc/: sprintf.cpp
src/util/memory/: String.cpp
src/util/stream/: StringFormatOutputStream.cpp  StringFormatOutputStream.h
tool/: mkhdd.sh
(+15 files in other folders)
